--- a/.gitignore
+++ b/.gitignore
@@ -362,5 +362,6 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 
-# appsetting.json
+# appsetting
+appsettings.Development.json
 appsettings.json
