--- a/TH4_Nhom20.csproj
+++ b/TH4_Nhom20.csproj
@@ -23,4 +23,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.8" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\Canon\DSLR\" />
+  </ItemGroup>
+
 </Project>
